calc-webapp/src/main/webapp/css/calc.css
/* ... */
.row1 {
	height: 40%;
	width: 100%;
	margin: 0px;
}
.row2 {
	height: 20%;
	width: 100%;
	margin: 0px;
}
.row3 {
	height: 40%;
	width: 100%;
	margin: 0px;
}

/* .btn-home, .btn-home-plus { */
.btn-home {
	height: 5.6em;
	width: 15%;
/* 	font-size: 1.7em; */
/* 	font-weight: 200; */
/* 	line-height: 2em; */
	overflow: visible;
	border-radius: 1px;
}
/**
* Default nav bar
*/
.navbar-default {
	background-color: transparent;
	border-color: #496d7e;
}
.navbar-default .navbar-nav > li {
	width: 300px;;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #496d7e;
/*   background-color: transparent; */
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
/*   color: #ffffff; */
  background-color: #496d7e;
}

/**
* Calculation
*/
#calculation .calculation-steps-outer-container {
	text-align: left;
	max-width: 100%;
/* 	margin: 2% auto 2% auto; */
	margin: 0px;
	padding: 30px 80px 10px 80px;
}
#calculation .calculation-steps-container {
/* 	padding: 0px 15px; */
	padding :0px;
	margin: 0px;
}
/* #calculation .btn-home-plus, #calculation .calculation-step { */
 #calculation .calculation-step, 
 	#calculation .calculation-step-placeholder {
 	width: 210px;
	height: 90px;
	padding: 1px 1px;
}

#calculation li.calculation-step button {
	width: 100%;
	height: 100%;
	background-color: #4d5e75;
	border-color: #4d5e75;
	border-radius: 0px;	
	transition: opacity 0.5s ease-in-out;
}
#calculation li.calculation-step button.inactive {
	opacity: 0.2 !important;
    text-decoration: line-through;
    transition: opacity 0.5s ease-in-out;
}

#calculation li.CATEGORY button {
	background-color: #637471;
	border-color: #637471;
}
#calculation li.EQUATION button {
	background-color: #465160;
	border-color: #465160;
}

#calculation .calculation-steps-entity-container {
	display: table;
	background-color: #4f586c;
	padding: 20px 40px;
/* 	margin: 5px 5px; */
}
#calculation .calculation-steps-entity-container li {
	float: left;
	list-style: none;
}
#calculation li.entity button {
	width: 100%;
	height: 100%;
	padding: 30px 5px 0px 5px;
/* 	background-color: #4d5e75; */
/* 	border-color: #4d5e75; */
}

#calculation li.calculation-step button:hover {
	width: 100%;
	background-color: #5b718c;
	border-color: #5b718c;
}

#calculation li.entity {
	width: 210px;
	height: 90px;
	padding: 1px 1px;
}


#calculation li.calculation-step button .badge {
	background-color: transparent;
	margin: 0px 0px 0px 150px;
	right: -80px;
	font-size: 1.1em;
	color: #acb7ca;
	position: inherit;
}

#calculation .calculation-step-placeholder {
	border: 1px dashed #5b718c;
	border-radius: 1px;
}

#calculation button.highlight {
	color: #ffe29c;
}

/* settings */
#calculation .options {
	position: fixed;
	right: 170px;
	width: 320px;
	background-color: rgba(91, 113, 140, 0.24);
	border: 2px solid RGBA(185, 214, 251, 0.02);
	height: 180px;
	padding: 20px;
	z-index: 2;
}
/**
**
** button-bar
**
**/
.button-bar-left ,
.button-bar-right {
/* 	border:1px solid #2c3e50;  */
	display: block;
/* 	background-color: #496d7e; */
/* 	border-color: #496d7e; */
	
/* 	background-color: #36525f; */
/* 	border-color: #36525f; */
}
.button-bar-left {
	width: 210px ;
	float: left; 
}
.button-bar-left , .button-bar-left .button-bar-inner {
	height: 180px;
}
.button-bar-right {
	float: right;
/* 	height: 90px;  */
}
.button-bar-right , .button-bar-right .button-bar-inner {
	height: 180px;	
	width: 105px ;
}
.button-bar-inner {
	padding: 10px;
	background-color: #2c3e50;
	position: fixed; 
	width: 210px ;
}
.button-bar-inner button,
.button-bar-inner button:focus {
	width: 100%;
	background-color: #2c3e50;
/* 	background-color: #496d7e; */
	border-color: #2c3e50;
	color: #FFF;
	border-radius: 0;
	height: 100%;
}
.button-bar-inner button:hover, 
.button-bar-inner button.blue-btn-hover {
	background-color: #5b718c;
	border-color: #5b718c;
}
.button-bar-inner button i {
	font-size: 2em;
}

.button-bar-inner .badge {
	background-color: #5b718c;
	font-size: 0.7em;
	font-weight: 100;
	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
	border-radius: 3px;
}

.button-bar-inner .r-buttons .btn {
	height: 50% !important;
}
.button-bar-inner .r-buttons .btn:first-child {
	border-bottom: 1px solid rgb(86, 91, 103);
	border-bottom: 1px solid #5b718c;
}

.button-bar-inner .r-buttons .btn i {
	font-size: 2rem;
}
/**
* Footer
*/
#footer {
  	height: 10%;
/* 	position: fixed; */
	z-index: 10;
	width: 100%;
	background-color: #ecf0f1;
	margin:0px;
} 
.footer-placeholder {
	height: 10%;
}

#footer div{
	height: 100%;
}
#footer .links {
/* 	margin-top:40px; */
	padding : 5px 0px;
	text-align: center;
	width: 90% ;
	border-top: 1px solid rgba(184, 157, 157, 0.3);
	margin-left: 5%;
}
#footer .links  button {
	height: 100%;
	width: 20%;
	font-weight: 100;
	letter-spacing: 0.03em;
	border-radius: 1px;
	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
#footer .logo {
	font-weight: 100;
	text-align: center;
	height: auto;
	padding-top: 15px;
	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
	letter-spacing: 3px; 
	color: rgba(212, 224, 215, 0.6);
}
#footer .logo button.calc-btn, 
#footer .logo button.calc-btn:focus {
	border-radius: 32px;
    border: 1px solid rgba(46, 155, 181, 0.23);
    background-color: rgba(58, 159, 159, 0.15);
    height: 50px;
    width: 50px;
    padding: 0px;
    position: absolute;
    right: 50px;
}
#footer .logo button.calc-btn:hover {
	 background-color: rgba(58, 159, 159, 0.25);
}
#footer .application-version-container {
	padding-top: 15%;
	font-size: 0.7em;
    color: whitesmoke;
    padding-bottom: 15%;
    font-style: italic;
    color: rgba(222, 228, 239, 0.8);
}
/* ... */

